fixing auth in backend

--- a/frontend/src/components/Companies/Companies.css
+++ b/frontend/src/components/Companies/Companies.css
@@ -4,7 +4,7 @@
   align-items: center;
   background-size: cover;
   background-position: center;
-  background-image: url('./background.jpg');
+  background-image: url('../../assets/background.jpg');
   background-attachment: fixed;
 }
 
