--- a/frontend/src/components/Company/Company.css
+++ b/frontend/src/components/Company/Company.css
@@ -2,7 +2,7 @@
   text-align: center;
   background-size: cover;
   background-position: center;
-  background-image: url('./background.jpg');
+  background-image: url('../../assets/background.jpg');
   background-attachment: fixed;
 }
 
