--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -5,7 +5,7 @@
   width: 100%;
   background-size: cover;
   background-position: center;
-  background-image: url('./background.jpg');
+  background-image: url('../../assets/background.jpg');
   background-attachment: fixed;
 }
 
