--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -18,6 +18,6 @@
   width: 100%;
   background-size: cover;
   background-position: center;
-  background-image: url('./background.jpg');
+  background-image: url('../../assets/background.jpg');
   background-attachment: fixed;
 }
